| Bug #58432 | innodb.innodb_bug56143 fails under valgrind | ||
|---|---|---|---|
| Submitted: | 23 Nov 2010 21:11 | Modified: | 25 Apr 2013 9:49 |
| Reporter: | Alexander Nozdrin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | Tests: Engine | Severity: | S3 (Non-critical) |
| Version: | 5.6,mysql-trunk | OS: | Any |
| Assigned to: | Vasil Dimov | CPU Architecture: | Any |
| Tags: | experimental, pb2, test failure | ||
[24 Nov 2010 6:13]
Vasil Dimov
Which tree/platform is this? In mysql-trunk-innodb/valgrind I see this:
innodb.innodb_bug56143 [ fail ] Found warnings/errors in server log file!
Test ended at 2010-11-20 02:47:23
line
InnoDB: Warning: a long semaphore wait:
^ Found warnings in /export/home2/pb2/test/sb_0-2553738-1290190057.3/mysql-5.6.1-m5-linux-x86_64-test/mysql-test/var-n_mix/log/mysqld.1.err
ok
- saving '/export/home2/pb2/test/sb_0-2553738-1290190057.3/mysql-5.6.1-m5-linux-x86_64-test/mysql-test/var-n_mix/log/innodb.innodb_bug56143/' to '/export/home2/pb2/test/sb_0-2553738-1290190057.3/mysql-5.6.1-m5-linux-x86_64-test/mysql-test/var-n_mix/log/innodb.innodb_bug56143/'
Retrying test innodb.innodb_bug56143, attempt(2/3)...
innodb.innodb_bug56143 [ retry-pass ] 338028
[24 Nov 2010 8:01]
Alexander Nozdrin
Hello, 1. this can be seen in trunk-bugfixing, trunk-stage, trunk. 2. yes, this is exactly the symptom. Are you referring to [retry-pass] of 2nd and 3rd attempts? Yes, sometimes 2nd and 3rd attempts are successful. However, I've seen logs with two subsequent failures.
[24 Nov 2010 8:03]
Alexander Nozdrin
Moving to Verified since we don't expect any verification here.
[24 Nov 2010 8:11]
Vasil Dimov
Yes, it sometimes passes and sometimes fails. Probably some timing issue that I need to investigate. Thanks for filling this bug and for moving the test to experimental!
[1 Dec 2010 11:11]
Vasil Dimov
Finally was able to reproduce this by applying the patch:
- && difftime(time(NULL), cell->reservation_time) > 240) {
+ && difftime(time(NULL), cell->reservation_time) > 24) {
the whole message is:
dscczz02:~/bzrroot/server/mysql-trunk-innodb/mysql-test$ cat ./var/log/mysqld.1.err
CURRENT_TEST: innodb.innodb_bug56143
==9973== Memcheck, a memory error detector
==9973== Copyright (C) 2002-2009, and GNU GPL'd, by Julian Seward et al.
==9973== Using Valgrind-3.5.0 and LibVEX; rerun with -h for copyright info
==9973== Command: /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/mysqld --defaults-group-suffix=.1 --defaults-file=/home/vdimov/bzrroot/server/mysql-trunk-innodb/mysql-test/var/my.cnf --log-output=file --loose-skip-log-bin --core-file --loose-debug-sync-timeout=300
==9973==
101201 13:58:14 InnoDB: The InnoDB memory heap is disabled
101201 13:58:14 InnoDB: Mutexes and rw_locks use GCC atomic builtins
101201 13:58:14 InnoDB: Compressed tables use zlib 1.2.3
101201 13:58:14 InnoDB: Using Linux native AIO
101201 13:58:14 InnoDB: Initializing buffer pool, size = 8.0M
101201 13:58:14 InnoDB: Completed initialization of buffer pool
101201 13:58:14 InnoDB: highest supported file format is Barracuda.
101201 13:58:15 InnoDB: 1.2.0 started; log sequence number 1595675
101201 13:58:15 [Warning] /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/mysqld: unknown variable 'loose-debug-sync-timeout=300'
101201 13:58:15 [Warning] No existing UUID has been found, so we assume that this is the first time that this server has been started. Generating a new UUID: e5ddfbfa-fd39-11df-a0c5-001517919b26.
101201 13:58:16 [Note] Event Scheduler: Loaded 0 events
101201 13:58:16 [Note] /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/mysqld: ready for connections.
Version: '5.6.1-m5-log' socket: '/home/vdimov/bzrroot/server/mysql-trunk-innodb/mysql-test/var/tmp/mysqld.1.sock' port: 13010 Source distribution
InnoDB: Warning: a long semaphore wait:
--Thread 248330560 has waited at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0purge.c line 654 for 25.00 seconds the semaphore:
S-lock on RW-latch at 0x1012580 created in file /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/dict/dict0dict.c line 771
a writer (thread id 268790080) has reserved it in mode exclusive
number of readers 0, waiters flag 1, lock_word: 0
Last time read locked in file not yet reserved line 0
Last time write locked in file /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0mysql.c line 3143
InnoDB: ###### Starts InnoDB Monitor for 30 secs to print diagnostic info:
InnoDB: Pending preads 0, pwrites 0
=====================================
101201 13:59:32 INNODB MONITOR OUTPUT
=====================================
Per second averages calculated from the last 16 seconds
-----------------
BACKGROUND THREAD
-----------------
srv_master_thread loops: 12 1_second, 12 sleeps, 1 10_second, 2 background, 1 flush
srv_master_thread log flush and writes: 13
----------
SEMAPHORES
----------
OS WAIT ARRAY INFO: reservation count 4, signal count 3
--Thread 248330560 has waited at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0purge.c line 654 for 40.00 seconds the semaphore:
S-lock on RW-latch at 0x1012580 created in file /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/dict/dict0dict.c line 771
a writer (thread id 268790080) has reserved it in mode exclusive
number of readers 0, waiters flag 1, lock_word: 0
Last time read locked in file not yet reserved line 0
Last time write locked in file /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0mysql.c line 3143
Mutex spin waits 9, rounds 195, OS waits 0
RW-shared spins 7, rounds 150, OS waits 3
RW-excl spins 1, rounds 30, OS waits 1
Spin rounds per wait: 21.67 mutex, 21.43 RW-shared, 30.00 RW-excl
------------
TRANSACTIONS
------------
Trx id counter 72C
Purge done for trx's n:o < 72A undo n:o < 0
History list length 1
LIST OF TRANSACTIONS FOR EACH SESSION:
---TRANSACTION 0, not started, process no 9973, OS thread id 268790080 purge trx
MySQL thread id 2, query id 23 localhost root checking permissions
DROP TABLE bug56143_2
---TRANSACTION 72B, ACTIVE 53 sec, process no 9973, OS thread id 268790080 dropping table
22 lock struct(s), heap size 3112, 2209 row lock(s), undo log entries 1098
MySQL thread id 2, query id 23 localhost root checking permissions
DROP TABLE bug56143_2
--------
FILE I/O
--------
I/O thread 0 state: waiting for completed aio requests (insert buffer thread)
I/O thread 1 state: waiting for completed aio requests (log thread)
I/O thread 2 state: waiting for completed aio requests (read thread)
I/O thread 3 state: waiting for completed aio requests (read thread)
I/O thread 4 state: waiting for completed aio requests (write thread)
I/O thread 5 state: waiting for completed aio requests (write thread)
Pending normal aio reads: 0 [0, 0] , aio writes: 0 [0, 0] ,
ibuf aio reads: 0, log i/o's: 0, sync i/o's: 0
Pending flushes (fsync) log: 1; buffer pool: 0
157 OS file reads, 776 OS file writes, 577 OS fsyncs
0.00 reads/s, 0 avg bytes/read, 0.06 writes/s, 0.00 fsyncs/s
-------------------------------------
INSERT BUFFER AND ADAPTIVE HASH INDEX
-------------------------------------
Ibuf: size 1, free list len 0, seg size 2, 0 merges
merged operations:
insert 0, delete mark 0, delete 0
discarded operations:
insert 0, delete mark 0, delete 0
Hash table size 17359, node heap has 4 buffer(s)
3291.17 hash searches/s, 47.25 non-hash searches/s
---
LOG
---
Log sequence number 2179090
Log flushed up to 2178894
Last checkpoint at 1595675
0 pending log writes, 0 pending chkp writes
579 log i/o's done, 0.17 log i/o's/second
----------------------
BUFFER POOL AND MEMORY
----------------------
Total memory allocated 8585216; in additional pool allocated 0
Dictionary memory allocated 33650
Buffer pool size 511
Free buffers 198
Database pages 309
Old database pages 0
Modified db pages 101
Pending reads 0
Pending writes: LRU 0, flush list 2
Pages made young 0, not young 0
0.00 youngs/s, 0.00 non-youngs/s
Pages read 146, created 163, written 219
0.00 reads/s, 0.11 creates/s, 1.06 writes/s
Buffer pool hit rate 1000 / 1000, young-making rate 0 / 1000 not 0 / 1000
Pages read ahead 0.00/s, evicted without access 0.00/s
LRU len: 309, unzip_LRU len: 0
I/O sum[0]:cur[20], unzip sum[0]:cur[0]
--------------
ROW OPERATIONS
--------------
0 queries inside InnoDB, 0 queries in queue
1 read views open inside InnoDB
Main thread process no. 9973, id 248330560, state: sleeping
Number of rows inserted 0, updated 0, deleted 0, read 0
0.00 inserts/s, 0.00 updates/s, 0.00 deletes/s, 0.00 reads/s
----------------------------
END OF INNODB MONITOR OUTPUT
============================
101201 13:59:37 [Note] /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/mysqld: Normal shutdown
101201 13:59:37 [Note] Event Scheduler: Purging the queue. 0 events
101201 13:59:37 InnoDB: Starting shutdown...
dscczz02:~/bzrroot/server/mysql-trunk-innodb/mysql-test$
[1 Dec 2010 13:34]
Vasil Dimov
That test is single threaded, the backtrace is:
(gdb) bt
#0 0x000000000079ea8e in get_timer_value (timer_name=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/perfschema/pfs_timer.cc:99
#1 0x00000000007a561c in end_mutex_wait_v1 (locker=0x623a888, rc=0)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/perfschema/pfs.cc:1938
#2 0x000000000081fdcb in pfs_mutex_enter_func (mutex=0x8707a88,
file_name=0xa45a40 "/home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/buf/buf0buf.c", line=2906)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/include/sync0sync.ic:254
#3 0x0000000000827885 in buf_page_get_gen (space=0, zip_size=0, offset=458,
rw_latch=1, guess=0x0, mode=10,
file=0xa40ab0 "/home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/include/trx0undo.ic", line=176, mtr=0x100501e0)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/buf/buf0buf.c:2906
#4 0x00000000007e8062 in trx_undo_page_get_s_latched (roll_ptr=11821949051875124,
heap=0xefed080)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/include/trx0undo.ic:175
#5 trx_undo_get_undo_rec_low (roll_ptr=11821949051875124, heap=0xefed080)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/trx/trx0rec.c:1357
#6 0x00000000007ea1d2 in trx_undo_get_undo_rec (
index_rec=0x8330a20 "test/", 'a' <repeats 50 times>, "176",
index_mtr=<value optimized out>,
rec=0x8330a20 "test/", 'a' <repeats 50 times>, "176", index=0xbf0c868,
offsets=0xeff6b78, heap=0xefed080, old_vers=0x10050d38)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/trx/trx0rec.c:1398
#7 trx_undo_prev_version_build (
index_rec=0x8330a20 "test/", 'a' <repeats 50 times>, "176",
index_mtr=<value optimized out>,
rec=0x8330a20 "test/", 'a' <repeats 50 times>, "176", index=0xbf0c868,
offsets=0xeff6b78, heap=0xefed080, old_vers=0x10050d38)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/trx/trx0rec.c:1483
#8 0x00000000007d66ca in row_vers_impl_x_locked (
rec=0x8341b60 "test/bug56143_2test/", 'a' <repeats 50 times>, "176I\017 \002\300\005\034\002test/bug56143_2test/", 'a' <repeats 50 times>, "177I\017$\002\310\005\034Stest/bug56143_2test/", 'a' <repeats 18 times>..., index=0xbf0cf18,
offsets=0x10051730)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0vers.c:171
#9 0x000000000088246c in lock_sec_rec_some_has_impl (block=0x7eb5b80,
rec=0x8341b60 "test/bug56143_2test/", 'a' <repeats 50 times>, "176I\017 \002\300\005\034\002test/bug56143_2test/", 'a' <repeats 50 times>, "177I\017$\002\310\005\034Stest/bug56143_2test/", 'a' <repeats 18 times>..., index=0xbf0cf18,
offsets=0x10051730)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/lock/lock0lock.c:1601
#10 lock_rec_convert_impl_to_expl (block=0x7eb5b80,
rec=0x8341b60 "test/bug56143_2test/", 'a' <repeats 50 times>, "176I\017 \002\300\005\034\002test/bug56143_2test/", 'a' <repeats 50 times>, "177I\017$\002\310\005\034Stest/bug56143_2test/", 'a' <repeats 18 times>..., index=0xbf0cf18,
offsets=0x10051730)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/lock/lock0lock.c:5346
#11 0x000000000088791b in lock_sec_rec_read_check_and_lock (
flags=<value optimized out>, block=0x7eb5b80,
rec=0x8341b60 "test/bug56143_2test/", 'a' <repeats 50 times>, "176I\017 \002\300\005\034\002test/bug56143_2test/", 'a' <repeats 50 times>, "177I\017$\002\310\005\034Stest/bug56143_2test/", 'a' <repeats 18 times>..., index=0xbf0cf18,
offsets=0x10051730, mode=LOCK_S, gap_mode=0, thr=0xbe8c770)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/lock/lock0lock.c:5568
#12 0x00000000007caad1 in sel_set_rec_lock (node=0xc3d2ae8, thr=0xbe8c770)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0sel.c:997
#13 row_sel (node=0xc3d2ae8, thr=0xbe8c770)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0sel.c:1580
#14 0x00000000007cc775 in row_sel_step (thr=0xbe8c770)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0sel.c:2100
#15 0x00000000008b5ea4 in que_thr_step (thr=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1085
#16 que_run_threads_low (thr=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1169
#17 que_run_threads (thr=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1210
#18 0x00000000008b6554 in que_eval_sql (info=0xbe86b28,
sql=0xa397a8 "PROCEDURE DROP_TABLE_PROC () IS\nsys_foreign_id CHAR;\ntable_id CHAR;\nindex_id CHAR;\nforeign_id CHAR;\nfound INT;\nBEGIN\nSELECT ID INTO table_id\nFROM SYS_TABLES\nWHERE NAME = :table_name\nLOCK IN SHARE MODE"...,
reserve_dict_mutex=0, trx=0xbe862b8)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1290
#19 0x00000000007c23f1 in row_drop_table_for_mysql (
name=0x10052150 "test/bug56143_2", trx=0xbe862b8, drop_db=0)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0mysql.c:3321
#20 0x00000000007af4ad in ha_innobase::delete_table (this=<value optimized out>,
name=0x10053610 "./test/bug56143_2")
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/handler/ha_innodb.cc:7614
#21 0x0000000000659663 in ha_delete_table (thd=0xc3fe050,
table_type=<value optimized out>, path=0x0, db=0xed3bdc0 "test",
alias=0xed3b830 "bug56143_2", generate_warning=true)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/handler.cc:2048
#22 0x00000000005b9d29 in mysql_rm_table_no_locks (thd=0xc3fe050, tables=0xed3b878,
if_exists=false, drop_temporary=false, drop_view=false, dont_log_query=false)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_table.cc:2412
#23 0x00000000005babe7 in mysql_rm_table (thd=0xc3fe050, tables=0xed3b878,
if_exists=0 '\000', drop_temporary=0 '\000')
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_table.cc:2110
#24 0x000000000055adc6 in mysql_execute_command (thd=0xc3fe050)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_parse.cc:3008
#25 0x000000000055cffe in mysql_parse (thd=0xc3fe050,
rawbuf=0xed3b790 "DROP TABLE bug56143_2", length=<value optimized out>,
parser_state=0x10055c50)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_parse.cc:5537
#26 0x000000000055e0d1 in dispatch_command (command=COM_QUERY, thd=0xc3fe050,
packet=<value optimized out>, packet_length=21)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_parse.cc:1075
#27 0x000000000055e412 in do_command (thd=0xc3fe050)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_parse.cc:815
#28 0x00000000005ec6a4 in do_handle_one_connection (thd_arg=0xc3fe050)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_connect.cc:745
#29 0x00000000005ec78a in handle_one_connection (arg=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/sql/sql_connect.cc:684
#30 0x00000000007a47a2 in pfs_spawn_thread (arg=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/perfschema/pfs.cc:1078
#31 0x0000003acc80673d in start_thread () from /lib64/libpthread.so.0
#32 0x0000003acbcd3d1d in clone () from /lib64/libc.so.6
[1 Dec 2010 13:49]
Vasil Dimov
And this is the purge thread that is being blocked for so long:
(gdb) bt
#0 0x0000003acc80aee9 in pthread_cond_wait@@GLIBC_2.3.2 ()
from /lib64/libpthread.so.0
#1 0x000000000089d8f7 in os_cond_wait (event=0xbefa390, reset_sig_count=2)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/os/os0sync.c:207
#2 os_event_wait_low (event=0xbefa390, reset_sig_count=2)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/os/os0sync.c:634
#3 0x00000000007e041a in sync_array_wait_event (arr=0x78c5880, index=0)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/sync/sync0arr.c:457
#4 0x00000000007e0baa in rw_lock_s_lock_spin (lock=0x1012580,
pass=<value optimized out>,
file_name=0xa5ab68 "/home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0purge.c", line=654)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/sync/sync0rw.c:450
#5 0x00000000008c01fe in row_purge (thr=0x8a55900)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/include/sync0rw.ic:418
#6 row_purge_step (thr=0x8a55900)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/row/row0purge.c:836
#7 0x00000000008b61b6 in que_thr_step (thr=0x8a55900)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1107
#8 que_run_threads_low (thr=0x8a55900)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1169
#9 que_run_threads (thr=0x8a55900)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/que/que0que.c:1210
#10 0x00000000007e7b31 in trx_purge (n_purge_threads=0, batch_size=20)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/trx/trx0purge.c:1274
#11 0x00000000007d8212 in srv_master_do_purge ()
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/srv/srv0srv.c:2140
#12 0x00000000007dae07 in srv_master_thread (arg=<value optimized out>)
at /home/vdimov/bzrroot/server/mysql-trunk-innodb/storage/innobase/srv/srv0srv.c:2473
#13 0x0000003acc80673d in start_thread () from /lib64/libpthread.so.0
#14 0x0000003acbcd3d1d in clone () from /lib64/libc.so.6
[1 Dec 2010 14:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/125664 3350 Vasil Dimov 2010-12-01 Fix Bug#58432 innodb.innodb_bug56143 fails under valgrind Use a longer timeout for semaphore waits if (possibly) running under Valgrind. Approved by: Marko (via IRC)
[1 Dec 2010 14:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/125665 3351 Vasil Dimov 2010-12-01 Fix Bug#58432 innodb.innodb_bug56143 fails under valgrind Use a longer timeout for semaphore waits if (possibly) running under Valgrind. Approved by: Marko (via IRC)
[22 Dec 2010 21:31]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
[6 Jan 2011 1:22]
Paul DuBois
Bug does not appear in any released version. No changelog entry needed.
[7 Jan 2011 6:43]
Anitha Gopi
Was this pushed into the 5.6.1 clone? Problem still seen on trunk http://pb2.norway.sun.com/?action=archive_download&archive_id=2745699&pretty=please innodb.innodb_bug56143 w8 [ fail ] Found warnings/errors in server log file! Test ended at 2011-01-06 14:32:40 line InnoDB: Warning: a long semaphore wait:
[7 Jan 2011 8:05]
Vasil Dimov
Yes, but in order for the fix to take effect mysql must be compiled with WITH_VALGRIND, which I believe is still not done on PB2/valgrind tests.
[8 Jan 2011 15:09]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:vasil.dimov@oracle.com-20110108150508-gpanhz48z8069qot) (version source revid:vasil.dimov@oracle.com-20110108150048-b1y9m8xe72hay0ch) (merge vers: 5.5.9) (pib:24)
[12 Jan 2011 16:37]
Vasil Dimov
http://lists.mysql.com/commits/128534
[17 Jan 2011 4:33]
Anitha Gopi
Vasil, The test is still failing on PB2. Please ensure that the test passes there before closing the bug http://pb2.norway.sun.com/?action=archive_download&archive_id=2823413&pretty=please
[18 Jan 2011 7:45]
Vasil Dimov
The patch has been pushed into -innodb trees, not yet reached the main trees.
[25 Apr 2013 9:49]
Vasil Dimov
Fixed in http://lists.mysql.com/commits/128534

Description: Symptoms: ---------------------------------------------------------- innodb.innodb_bug56143 [ fail ] Found warnings/errors in server log file! Test ended at 2010-11-23 03:19:32 line InnoDB: Warning: a long semaphore wait: ^ Found warnings in /export/home3/pb2/test/sb_1-2563960-1290418516.3/mysql-5.6.1-m5-linux-x86_64-test/mysql-test/var-ps_row/log/mysqld.1.err ok ---------------------------------------------------------- Moving the test case to experimental due to this issue. How to repeat: Check out PB.