Fix Bug#58432 innodb.innodb_bug56143 fails under valgrind

Use a longer timeout for semaphore waits if (possibly) running under
Valgrind.

Approved by:	Marko (via IRC)